--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ div.main{
 div#book{
     width: 48vw;
     height:80vh;
-    background: #000d36;
+    background: #2F2F2F;
     border:3px solid #5c5c7c;
     border-radius:4px;
     margin-right:.5em;
